change font-size for <input> to prevent auto-zoom on iOS

--- a/calctax.css
+++ b/calctax.css
@@ -56,6 +56,7 @@ h2{
 #main input{
   width: 8em;
   text-align: right;
+  font-size: 16px; /* iOS自動ズーム防止 */
 }
 #main .underline{
   border-bottom: 1px solid black;
